# learnOpenGL

./: .gitignore
1_gl_basics/: CMakeLists.txt  glad.c  main.cpp
2_gl_organized/: CMakeLists.txt  Ebo.cpp  Shader.cpp  Shader.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  main.cpp  test.txt
2_gl_organized/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  default.vert  openGL_Tutorial_0  openGL_Tutorial_0.cbp  qtcsettings.cmake
2_gl_organized/Debug/.cmake/api/v1/reply/: cache-v2-f73c56163eb2da6f8a7c.json  cmakeFiles-v1-17a8becdfcdf3793416b.json  codemodel-v2-2f4256266f2417afdfdc.json  codemodel-v2-6a3b833b7f83f11bffaf.json  index-2022-04-05T20-31-57-0869.json  index-2022-04-06T10-35-24-0085.json  target-openGL_Tutorial_0-Debug-43fe5c7434fe2d95798e.json  target-openGL_Tutorial_0-Debug-e9a2782cad6a341bd934.json
2_gl_organized/shaders/: default.frag  default.vert
3_gl_textures/: CMakeLists.txt  GLBuffer.h  Shader.h  Vao.h  log.h  main.cpp
3_gl_textures/shaders/: default.frag  default.vert
4_gl_first3D/: CMakeLists.txt  Vao.cpp  main.cpp
4_gl_first3D/shaders/: default.vert
5_gl_camera/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
5_gl_camera/shaders/: default.frag  default.vert
6_gl_lighting/: CMakeLists.txt  Camera.cpp  Camera.h  Ebo.h  Shader.h  main.cpp
6_gl_lighting/shaders/: default.frag  default.vert  pointLight.vert
7_gl_multipleLightSources/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
7_gl_multipleLightSources/shaders/: default.frag  pointLight.frag
